--- a/assets/icons/manifest.json
+++ b/assets/icons/manifest.json
@@ -7,7 +7,7 @@
   "display": "standalone",
   "orientation": "any",
   "scope": "/",
-  "start_url": "/?homescreen=1",
+  "start_url": "/",
   "background_color": "#f4f1de",
   "theme_color": "#fff",
   "icons": [
